--- a/css/main.css
+++ b/css/main.css
@@ -3,25 +3,41 @@ body {
   color: #222;
 }
 
+.emojis {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(2,1fr);
+    gap: 1em;
+}
+
 .emoji {
-  border: 1px solid #222;
-  border-radius: 8px;
-  padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    border: 1px solid #222;
+    border-radius: 8px;
+    padding: 1rem;
 }
 
 .emoji h2 {
-  margin: 0;
-  border-bottom: 2px solid #ccc;
+    margin: 0;
+    border-bottom: 2px solid #ccc;
 }
 
 .emoji a {
-  text-decoration: none;
-  background-color: #781BAA;
-  color: white;
-  padding: 1rem;
-  border-radius: 8px;
+    text-decoration: none;
+    background-color: #781BAA;
+    color: white;
+    padding: 1rem;
+    border-radius: 8px;
+    
+    margin-top: auto;
 }
 
 .icon {
-  font-size: 4rem;
+    font-size: 4rem;
+    text-align: center;
+    order: -1;
+
 }
