--- a/css/main.css
+++ b/css/main.css
@@ -6,14 +6,20 @@ body {
 .emojis {
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    grid-template-rows: repeat(2,1fr);
     gap: 1em;
+
+    width: 850px;
+    margin: auto;
+}
+
+.siteheader {
+    width: 850px;
+    margin: auto;
 }
 
 .emoji {
     display: flex;
     flex-direction: column;
-    justify-content: center;
 
     border: 1px solid #222;
     border-radius: 8px;
@@ -25,19 +31,20 @@ body {
     border-bottom: 2px solid #ccc;
 }
 
+.emoji p {
+    flex-grow: 1;
+}
+
 .emoji a {
     text-decoration: none;
     background-color: #781BAA;
     color: white;
     padding: 1rem;
     border-radius: 8px;
-    
-    margin-top: auto;
 }
 
 .icon {
     font-size: 4rem;
     text-align: center;
     order: -1;
-
 }
